<?xml version="1.0"?>
<package>
  <name>flir_ptu_controllers</name>
  <version>0.1.0</version>
  <description>The flir_ptu_controllers package</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <url>http://wiki.ros.org/flir_ptu_driver</url>
  <license>BSD</license>
  
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
